filled out Organization section

--- a/Acknowledgements.tex
+++ b/Acknowledgements.tex
@@ -1,3 +1,3 @@
 \chapter*{Acknowledgments}
 
-Five years ago, when I first took an interest in robotics, I went with several of my friends to ask a professor for support in starting our own design team. We entered the professor's office with no money, no experience, and no plan. That professor bet on us when we had nothing going for us but curiosity and optimism. Years later, that same professor became my adviser and continued to support me in my research endeavors. It is my pleasure to thank Dr. Kevin Kochersberger for saying ``yes'' in a world all too accustomed to saying ``no.'' Thank you.
+Five years ago, when I first took an interest in robotics, I went with several of my friends to ask a professor for support in starting our own design team. We entered the professor's office with no money, no experience, and no plan. That professor bet on us when we had nothing but curiosity and optimism. Years later, that same professor became my adviser and continued to support me in my research endeavors. It is my pleasure to thank Dr. Kevin Kochersberger for saying ``yes'' in a world all too accustomed to saying ``no.'' Thank you.
