added prior work

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -49,4 +49,4 @@ We briefly summarize the contributions made by this work, the effectiveness of t
 
 \subsection*{Future Work}
 
-In Future Work, we expand upon the possible improvements proposed in Experimental Results and also offer a number of applications for this work. Specific examples of heterogeneous fleet management and traffic control are explored.
+In Future Work, we expand upon the possible improvements proposed in Experimental Results and also offer a number of applications for this work. Specific examples of heterogeneous fleet management and unmanned traffic management (UTM) are explored.
