--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{inconsolata}
 \usepackage{fourier}
+\usepackage{verbatim}
 
 \hypersetup{
     unicode=false,          % non-Latin characters in Acrobat’s bookmarks
@@ -40,28 +41,27 @@
 \input{Acknowledgements.tex}
 
 \tableofcontents
+
+\begin{comment}
 \listoffigures
 \listoftables
+\end{comment}
 
 \input{Introduction.tex}
 
 \input{Prior_Work.tex}
 
-\chapter{Thesis Statement}
-
+\begin{comment}
 \chapter{Algorithm Design and Implementation}
-
 \chapter{Experimental Design}
-
 \chapter{Experimental Results}
-
 \chapter{Conclusions}
-
 \chapter{Future Work}
 
 \appendix
 
 \clearpage
 \addcontentsline{toc}{chapter}{Bibliography}
+\end{comment}
 
 \end{document}
