--- a/Prior_Work.tex
+++ b/Prior_Work.tex
@@ -2,7 +2,7 @@
 
 \subsection{Unscented Filtering and Nonlinear Estimation}
 
-Julier and Uhlmann discuss the application of the extended Kalman filter (EKF) as an estimation algorithm and the associated difficulties. The EKF contains inherent problems and works best with linear systems. These limitations led to the development of the unscented transformation (UT) for nonlinear applications. In this paper, Julier and Uhlmann describe the unscented transformation (UT) and its benefits including easier implementation and improved accuracy. UT offers greater accuracy and reliability by applying higher order information using sigma points to the traditional mean and covariance information associated with linear applications. The authors provide examples, which may be tailored, that show how UT overcomes the limitations of the EKF.
+In \cite{Julier2004}, Julier and Uhlmann discuss the application of the extended Kalman filter (EKF) as an estimation algorithm and the associated difficulties. The EKF contains inherent problems and works best with linear systems. These limitations led to the development of the unscented transformation (UT) for nonlinear applications. In this paper, Julier and Uhlmann describe the unscented transformation (UT) and its benefits including easier implementation and improved accuracy. UT offers greater accuracy and reliability by applying higher order information using sigma points to the traditional mean and covariance information associated with linear applications. The authors provide examples, which may be tailored, that show how UT overcomes the limitations of the EKF.
 
 \subsection{A Multi-State Constraint Kalman Filter for Vision-aided Inertial Navigation}
 
@@ -14,7 +14,7 @@ Autonomous micro aerial vehicles (MAVs) provide access to environments that are 
 
 \subsection{Autonomous Multi-Floor Indoor Navigation with a Computationally Constrained MAV}
 
-In this paper, Shen et al. extend the work of other authors on the topic of autonomous MAV navigation, particularly as it relates to stable indoor flight and GPS-denied localization in constrained multi-floor environments. The research distinguishes itself by emphasizing the use of onboard sensors only, as well as fully autonomous, real-time internal computational capabilities, with no hands-on user interaction beyond basic high-level commands. The research extends to multi-floor MAV operation with loop closure. It also addresses specially designed controllers to help compensate for sudden changes in wind velocity and air flow as the MAV traverses constrained low-clearance areas with potentially strong aerodynamic disturbances.
+In this paper \cite{Shen2011}, Shen et al. extend the work of other authors on the topic of autonomous MAV navigation, particularly as it relates to stable indoor flight and GPS-denied localization in constrained multi-floor environments. The research distinguishes itself by emphasizing the use of onboard sensors only, as well as fully autonomous, real-time internal computational capabilities, with no hands-on user interaction beyond basic high-level commands. The research extends to multi-floor MAV operation with loop closure. It also addresses specially designed controllers to help compensate for sudden changes in wind velocity and air flow as the MAV traverses constrained low-clearance areas with potentially strong aerodynamic disturbances.
 
 \subsection{Real-Time Metric State Estimation for Modular Vision-Inertial Systems}
 
