--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
     pdfnewwindow=true,      % links in new PDF window
     colorlinks=true,       % false: boxed links; true: colored links
     linkcolor=black,          % color of internal links (change box color with linkbordercolor)
-    citecolor=green,        % color of links to bibliography
+    citecolor=black,        % color of links to bibliography
     filecolor=magenta,      % color of file links
     urlcolor=blue           % color of external links
 }
@@ -57,11 +57,12 @@
 \chapter{Experimental Results}
 \chapter{Conclusions}
 \chapter{Future Work}
-
 \appendix
+\end{comment}
 
 \clearpage
 \addcontentsline{toc}{chapter}{Bibliography}
-\end{comment}
+\bibliographystyle{ieeetr}
+\bibliography{bibliography} 
 
 \end{document}
