added stub for alg design

--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,10 @@
 \usepackage{inconsolata}
 \usepackage{fourier}
 \usepackage{verbatim}
+\usepackage{amssymb}
+\usepackage{amsmath}
+
+\linespread{1.15}
 
 \hypersetup{
     unicode=false,          % non-Latin characters in Acrobat’s bookmarks
@@ -51,8 +55,9 @@
 
 \input{Prior_Work.tex}
 
+\input{Alg_Design.tex}
+
 \begin{comment}
-\chapter{Algorithm Design and Implementation}
 \chapter{Experimental Design}
 \chapter{Experimental Results}
 \chapter{Conclusions}
