added some refs to bib, edited Prior Work

--- a/Alg_Design.tex
+++ b/Alg_Design.tex
@@ -1,4 +1,4 @@
-\chapter{Algorithm Design and Implementation}
+\chapter{Algorithm Design and Implementation} \label{ch:alg_design}
 
 We begin by defining the state vector $\mathbf{x} \in \mathbb{R}^{n}$:
 %
