--- a/Introduction.tex
+++ b/Introduction.tex
@@ -17,7 +17,7 @@ After two years of involvement with the CARD team, I applied for an internship a
 
 My internship at the NIA brought me into contact with Dr. Danette Allen, head of the NASA Langley Autonomy Incubator. During the 2014--15 academic year, Dr. Allen sponsored the CARD team to design and build two autonomous multirotor delivery drones. These aircraft were capable of delivering 5-lb packages to distances of up to 2.5 miles (or 5 miles, round trip). In addition, these vehicles were able to land precisely on 1 m$^2$ April tags such as that found in Figure~\ref{fig:april_tag}\footnote{\url{http://wiki.ros.org/apriltags\_ros}}. Following the completion of this project, I worked as a summer intern at the Autonomy Incubator.
 
-During the summer of 2015, I began the research that eventually evolved into my thesis project, studying Visual-Inertial Navigation (VIN) and the unscented Kalman filter. In reading up on the unscented Kalman filter (UKF), I took a serious interest in the design of the algorithm. Unlike many other formulations of the Kalman filter, the UKF has a notably limited dependence on information about the system whose state is being estimated (this \textit{system agnosticism} is discussed in detail later on in {\color{red}Chapter~@@@@@}). In learning about the UKF, I became excited by the idea of taking advantage of this trait to build a minimalistic software interface by which a wide variety of disparate systems could one day be tracked and studied in a ROS framework. I envisioned a kind of ``one-stop shopping'' experience for massively reusable and customizable filtering profiles that could fulfill the needs of a great many researchers and roboticists with little overhead in the way of state estimation knowledge. This vision eventually drove my development of the \texttt{kalman\_sense} ROS package and cemented my interest in state estimation and controls.
+During the summer of 2015, I began the research that eventually evolved into my thesis project, studying Visual-Inertial Navigation (VIN) and the unscented Kalman filter. In reading up on the unscented Kalman filter (UKF), I took a serious interest in the design of the algorithm. Unlike many other formulations of the Kalman filter, the UKF has a notably limited dependence on information about the system whose state is being estimated (this \textit{system agnosticism} is discussed in detail later on in Chapter~\ref{ch:alg_design}). In learning about the UKF, I became excited by the idea of taking advantage of this trait to build a minimalistic software interface by which a wide variety of disparate systems could one day be tracked and studied in a ROS framework. I envisioned a kind of ``one-stop shopping'' experience for massively reusable and customizable filtering profiles that could fulfill the needs of a great many researchers and roboticists with little overhead in the way of state estimation knowledge. This vision eventually drove my development of the \texttt{kalman\_sense} ROS package and cemented my interest in state estimation and controls.
 
 \section{Project Overview}
 % i.	Relationship between Kalman filtering and Visual-Inertial Navigation (1)
