--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,5 +1,5 @@
 @conference{Julier2004,
-    author    = "Julier, S. and Uhlmann, J.",
+    author    = "Julier, S. J. and Uhlmann, J. K.",
     title     = {{Unscented Filtering and Nonlinear Estimation}},
     booktitle = "Invited Paper Proceedings of the IEEE",
     volume = "92",
@@ -15,4 +15,18 @@
     booktitle = "IEEE International Conference on Robotics and Automation",
     pages    = "20--25",
     year      = "2011"
+}
+
+@proceeding{Julier1997,
+author = {Julier, Simon J. and Uhlmann, Jeffrey K.},
+title = {{A New Extension of the Kalman Filter to Nonlinear Systems}},
+journal = {Proc. SPIE},
+volume = {3068},
+number = {},
+pages = {182-193},
+abstract = {The Kalman Filter (KF) is one of the most widely used methods for tracking and estimation due to its simplicity, optimality, tractability and robustness. However, the application of the KF to nonlinear systems can be difficult. The most common approach is to use the Extended Kalman Filter (EKF) which simply linearizes all nonlinear models so that the traditional linear Kalman filter can be applied. Although the EKF (in its many forms) is a widely used filtering strategy, over thirty years of experience with it has led to a general consensus within the tracking and control community that it is difficult to implement, difficult to tune, and only reliable for systems which are almost linear on the time scale of the update intervals. In this paper a new linear estimator is developed and demonstrated. Using the principle that a set of discretely sampled points can be used to parameterize mean and covariance, the estimator yields performance equivalent to the KF for linear systems yet generalizes elegantly to nonlinear systems without the linearization steps required by the EKF. We show analytically that the expected performance of the new approach is superior to that of the EKF and, in fact, is directly comparable to that of the second order Gauss filter. The method is not restricted to assuming that the distributions of noise sources are Gaussian. We argue that the ease of implementation and more accurate estimation features of the new filter recommend its use over the EKF in virtually all applications.},
+year = {1997},
+doi = {10.1117/12.280797},
+URL = { http://dx.doi.org/10.1117/12.280797},
+eprint = {}
 }
