--- a/Prior_Work.tex
+++ b/Prior_Work.tex
@@ -1,8 +1,8 @@
 \chapter{Prior Work}
 
-\subsection{Unscented Filtering and Nonlinear Estimation}
+\section{The Evolution of Nonlinear State Estimation Methods}
 
-In \cite{Julier1997,Julier2004}, Julier and Uhlmann discuss the application of the extended Kalman filter (EKF) as an estimation algorithm and the associated difficulties. The EKF contains inherent problems and works best with linear systems. These limitations led to the development of the unscented transformation (UT) for nonlinear applications. In this paper, Julier and Uhlmann describe the unscented transformation (UT) and its benefits including easier implementation and improved accuracy. UT offers greater accuracy and reliability by applying higher order information using sigma points to the traditional mean and covariance information associated with linear applications. The authors provide examples, which may be tailored, that show how UT overcomes the limitations of the EKF.
+In \cite{Julier1997,Julier2004}, Julier and Uhlmann discuss the application of the extended Kalman filter (EKF) as an estimation algorithm and the associated difficulties. The EKF contains inherent problems and works best with linear systems. These limitations led to the development of the unscented transformation (UT) for nonlinear applications. In this paper, Julier and Uhlmann describe the UT and its benefits including easier implementation and improved accuracy. UT offers greater accuracy and reliability by applying higher order information using sigma points to the traditional mean and covariance information associated with linear applications. The authors provide examples, which may be tailored, that show how UT overcomes the limitations of the EKF.
 
 \subsection{A Multi-State Constraint Kalman Filter for Vision-aided Inertial Navigation}
 
