--- a/main.tex
+++ b/main.tex
@@ -62,7 +62,7 @@ right=1.5in}
 
 \input{Prior_Work.tex}
 
-\input{Alg_Design.tex}
+%\input{Alg_Design.tex}
 
 \begin{comment}
 \chapter{Experimental Design}
