--- a/Prior_Work.tex
+++ b/Prior_Work.tex
@@ -2,16 +2,17 @@
 
 In \cite{Julier1997}, Simon Julier and Jeffrey Uhlmann discuss the development and demonstration of a new nonlinear estimator for the Kalman Filter. Recognizing that most applications for autonomous navigation are fundamentally nonlinear in both their dynamics and their observation models, Julier and Uhlmann proposed the use of a set of discretely sampled ``sigma points'' to determine the mean and covariance of a probability distribution. By recasting the prediction and correction steps of the Kalman filter in the form of unscented transforms (UTs), this new filter eliminates the need to calculate Jacobian matrices. Julier and Uhlmann argued that for this reason their formulation was easier to implement than the Extended Kalman Filter (EKF) and went on to suggest that its use could supplant the EKF in virtually all applications, linear or nonlinear.
 
-In \cite{Julier1998} (@year?), Julier acknowledges that the Kalman Filter (KF) has been successfully used in many nonlinear scenarios, but he also points out that the KF’s use of only the first two moments of the state estimate sigma points results in neglect of all higher order information (i.e., third order moments, or “skew”), a potentially rich source of new and useful information relating to symmetry of the state estimate. By extending the sigma point selection scheme of the conventional unscented transformation (UT), the author presents a new and tractable – but computationally complex – extension of the KF algorithm that can predict not only the first two moments of a sigma point distribution (mean and covariance), but also the third moment (the so-called “skew”). Though formulated initially for unimodal distributions, the approach can, with additional mathematical considerations, be generalized for use with multimodal distributions. The author’s contention was that use of higher order information could promote better performance levels in autonomous vehicle navigation. The utility of maintaining and utilizing higher order information through the use of skewed filtering was assessed by the authors in a realistic tracking scenario. However, the results turned out to be somewhat disappointing as the change in performance turned out to be minimal, presumably due to the linearity of the KF’s update rule. Accordingly, research in this area continues, including examination of the use of nonlinear update rules in the filtering process.
+In \cite{Julier1998}, Julier acknowledges that the (linear) Kalman Filter has been used successfully in many nonlinear scenarios, but points out that the use of only the first two moments of the state estimate sigma points results in neglect of all higher order information (that is, third-order moments, or ``skew''), a potentially rich source of new and useful information relating to symmetry of the state estimate. By extending the sigma point selection scheme of the conventional unscented transform, Julier was able to present a tractable but computationally complex extension of the Kalman filter that could predict not only the first two moments of a sigma point distribution, but also the third moment (the so-called ``skew''). Though formulated initially for unimodal distributions, Julier stated that the approach could, with additional mathematical considerations, be generalized for use with multimodal distributions. Julier's contention was that use of higher order information could promote better performance levels in autonomous vehicle navigation. The utility of maintaining and utilizing higher order information through the use of skewed filtering was assessed by the authors in a realistic tracking scenario. However, the results turned out to be somewhat disappointing as the change in performance turned out to be minimal, presumably due to the linearity of the filter's update rule. Accordingly, research in this area continues, including examination of the use of nonlinear update rules in the filtering process.
 
-In [Julier 2002] Simon Julier describes a novel approach to modifying the “unscented transformation” (UT) state estimation method, a subject of one of his previous studies in collaboration with Jeffrey Uhlmann. In the current paper, however, Julier takes the additional step of introducing a new framework for scaling sigma points as part of the state estimation process. The general framework of the new methodology allows preservation of the first two moments of any set of sigma points, thus providing a construct for limiting values to either the conventional unscented transform or the modified (scaled) transform. Providing detailed mathematical validations, the author shows that the new scaling algorithm is computationally manageable in that it is, in essence, little more than the conventional unscented transformation algorithm with the addition of a simple post-processing step, the only difference being the inclusion of an extra correction term. Thus, the new algorithm’s computational and storage costs are similar to that of the non-scaled transformation. The performance level of the scaled UT is thus demonstrably superior when the conventional non-scaled UT is used for propagating the two lower-order moments of a sigma point distribution.
+In [Julier 2002] Simon Julier describes a novel approach to modifying the “unscented transformation” (UT) state estimation method, a subject of one of his previous studies in collaboration with Jeffrey Uhlmann. In the current paper, however, Julier takes the additional step of introducing a new framework for scaling sigma points as part of the state estimation process. The general framework of the new methodology allows preservation of the first two moments of any set of sigma points, thus providing a construct for limiting values to either the conventional unscented transform or the modified (scaled) transform. Providing detailed mathematical validations, the author shows that the new scaling algorithm is computationally manageable in that it is, in essence, little more than the conventional unscented transformation algorithm with the addition of a simple post-processing step, the only difference being the inclusion of an extra correction term. Thus, the new algorithm's computational and storage costs are similar to that of the non-scaled transformation. The performance level of the scaled UT is thus demonstrably superior when the conventional non-scaled UT is used for propagating the two lower-order moments of a sigma point distribution.
+
 [Julier 2004] Julier and Uhlmann discuss the application of the extended Kalman filter (EKF) as an estimation algorithm and the associated difficulties. The EKF contains inherent problems and works best with linear systems. These limitations led to the development of the unscented transformation (UT) for nonlinear applications. In this paper, Julier and Uhlmann describe the unscented transformation (UT) and its benefits including easier implementation and improved accuracy. The UT offers greater accuracy and reliability by applying higher order information using sigma points to the traditional mean and covariance information associated with linear applications. The authors provide examples, which may be tailored, that show how UT overcomes the limitations of the EKF.
 
-[Mourikis 2007] Mourikis et al. expand investigation of the familiar topic of Vision-aided Inertial Navigation, with particular emphasis on small, low-cost, low-weight systems, including unmanned aerial vehicles (UAVs) using a monocular camera. Because technical advances have been made in the manufacture of inertial sensors, these robotic systems are capable of producing high precision state estimations even in uncontrolled urban environments, without utilizing a 3D feature position in the filter state vector of the Extended Kalman Filter (EKF). The exceptional accuracy produced in this real-time, real-world pose estimation model is highly desirable because it produces images that are rich in high-dimensional measurements. This robustness, however, invariably comes at a cost of computational complexity in the EKF-based algorithm, a trade-off that is unavoidable in the present state-of-the-art for vision-aided inertial navigation systems.
+[Mourikis 2007] Mourikis et al. expand investigation of the familiar topic of Vision-aided Inertial Navigation, with particular emphasis on small, low-cost, low-weight systems, including unmanned aerial vehicles (UAVs) using a monocular camera. Because technical advances have been made in the manufacture of inertial sensors, these robotic systems are capable of producing high precision state estimations even in uncontrolled urban environments, without utilizing a 3D feature position in the filter state vector of the Extended Kalman Filter. The exceptional accuracy produced in this real-time, real-world pose estimation model is highly desirable because it produces images that are rich in high-dimensional measurements. This robustness, however, invariably comes at a cost of computational complexity in the EKF-based algorithm, a trade-off that is unavoidable in the present state-of-the-art for vision-aided inertial navigation systems.
 
-[Safanov 2007] Safonov revisits the decade of the 1970’s, a period of transition in the theoretical framework underlying effective control of dynamic motion, marking a paradigm shift from a long-held theoretical construct centered on the “optimality” of Linear-Quadratic-Gaussian (LQG) feedback design theory to one centered on “robustness”. The author observes that the shift stems from the poor performance of the LQG controllers involving early tests in real-world scenarios, a problem later recognized as an inadequate level of attention to the real-world need for high-level performance with respect to accuracy, flexibility, and overall robustness in motion control. A more pragmatic approach to motion control theory was thus born, with significant milestones being achieved throughout the 1970’s, including advancements in the areas of diagonally structured uncertainty, LQ multivariable gain margins, and LQ phase-margins, to name just a few. Further advancements came in the 1980’s, culminating in the publication of the “Robust Control Toolbox” in 1988, thus making robust control design techniques widely available to students and engineers alike.
+[Safanov 2007] Safonov revisits the decade of the 1970s, a period of transition in the theoretical framework underlying effective control of dynamic motion, marking a paradigm shift from a long-held theoretical construct centered on the ``optimality'' of Linear-Quadratic-Gaussian (LQG) feedback design theory to one centered on ``robustness.'' The author observes that the shift stems from the poor performance of the LQG controllers involving early tests in real-world scenarios, a problem later recognized as an inadequate level of attention to the real-world need for high-level performance with respect to accuracy, flexibility, and overall robustness in motion control. A more pragmatic approach to motion control theory was thus born, with significant milestones being achieved throughout the 1970s, including advancements in the areas of diagonally structured uncertainty, LQ multivariable gain margins, and LQ phase-margins, to name just a few. Further advancements came in the 1980s, culminating in the publication of the ``Robust Control Toolbox'' in 1988, thus making robust control design techniques widely available to students and engineers alike.
 
-[Klein, 2007] In most Augmented Reality (AR) camera pose estimate scenarios, there exists at least some knowledge of the user environment. Complications arise when this is not the case. In this paper, Klein and Murray propose a method in which a user can track a calibrated hand-held camera in an unknown environment, while still building a map of the environment. Primarily useful only for small AR workspace areas, this design splits the tracking and mapping functions into two separate tasks. These two tasks are processed on a dual-core computer utilizing “parallel threads”, with one thread directly tracking erratic motion of the hand-held camera while the other thread simultaneously produces a 3D map of the environment. In this approach, the authors estimate a dominant plane from mapped points and then populate it with virtual characters. To simplify the computationally complex tasks of simultaneously tracking and mapping, the nature of the scene to be tracked and mapped was constrained:  it should be small and, for the most part, static. Experiments demonstrated that the system could produce highly accurate maps, rich in detailed landmark information trackable at frame-rate, all without prior knowledge of the scene and with minimal initialization procedures.
+[Klein, 2007] In most Augmented Reality (AR) camera pose estimate scenarios, there exists at least some knowledge of the user environment. Complications arise when this is not the case. In this paper, Klein and Murray propose a method in which a user can track a calibrated hand-held camera in an unknown environment, while still building a map of the environment. Primarily useful only for small AR workspace areas, this design splits the tracking and mapping functions into two separate tasks. These two tasks are processed on a dual-core computer utilizing ``parallel threads,'' with one thread directly tracking erratic motion of the hand-held camera while the other thread simultaneously produces a 3D map of the environment. In this approach, the authors estimate a dominant plane from mapped points and then populate it with virtual characters. To simplify the computationally complex tasks of simultaneously tracking and mapping, the nature of the scene to be tracked and mapped was constrained:  it should be small and, for the most part, static. Experiments demonstrated that the system could produce highly accurate maps, rich in detailed landmark information trackable at frame rate, all without prior knowledge of the scene and with minimal initialization procedures.
 
 In [Weiss2010], Weiss et al. discuss how autonomous micro aerial vehicles (MAVs) provide access to environments that are otherwise difficult to traverse. Further, they mitigate the risk to people and the environment. For many applications, the MAV must navigate in a GPS-denied environment. This paper presents an approach to navigation that relies on a micro helicopter, a single camera, and onboard inertial sensors. A monocular simultaneous localization and mapping (SLAM) framework stabilizes the vehicle, which is used to overcome the issues with drift. This research is important because urban canyons limit GPS availability. The authors, in this paper, show that autonomous navigation in a GPS-denied environment is achievable. 
 
@@ -19,7 +20,7 @@ In [Weiss2010], Weiss et al. discuss how autonomous micro aerial vehicles (MAVs)
 
 [Weiss2011] Weiss and Roland Siegwart developed an algorithm that provides a metric scale to estimate that estimates monocular visual odometry or monoSLAM approaches. The authors accomplished the development of the metric scale by the addition of an inertial sensor with a three-axis accelerometer and gyroscope. Stephan Weiss and Roland Siegwart created a modular solution that is based on an Extended Kalman Filter (EKF) and provides both simulated results and data-based results. In this paper, the authors discuss their unique approach, its applications, versatility, and reliability of their estimating algorithm for visual odometry, such as visual SLAM, in real-time. 
 
-[Weiss 2012] Weiss et al present a versatile framework to enable autonomous ﬂights of a Micro Aerial Vehicle (MAV). The MAV has only slow, noisy, delayed and possibly arbitrarily scaled measurements available. The use of these measurements directly for position control is not practical since MAVs exhibit great agility in motion. In addition, these measurements often come from a selection of different onboard sensors, hence accurate calibration is crucial to the robustness of the estimation processes. In this article, Weiss, et al address the problems using an EKF formulation which fuses these measurements with inertial sensors. The authors not only estimate pose and velocity of the MAV, but also estimate sensor biases, scale of the position measurement and self (inter-sensor) calibration in real-time. The authors show that it is possible to obtain a yaw estimate from position measurements only. The authors demonstrate that the proposed framework is capable of running entirely onboard a MAV performing state prediction at the rate of 1kHz. Their results illustrate that this approach is able to handle measurement delays (up to 500ms), noise (std. deviation up to 20 cm) and slow update rates (as low as 1 Hz) while dynamic maneuvers are still possible. Stephan Weiss et al present a detailed quantitative performance evaluation of the real system under the inﬂuence of different disturbance parameters and different sensor setups to highlight the versatility of our approach. 
+[Weiss 2012] Weiss et al. present a versatile framework to enable autonomous flights of a Micro Aerial Vehicle (MAV). The MAV has only slow, noisy, delayed and possibly arbitrarily scaled measurements available. The use of these measurements directly for position control is not practical since MAVs exhibit great agility in motion. In addition, these measurements often come from a selection of different onboard sensors, hence accurate calibration is crucial to the robustness of the estimation processes. In this article, Weiss, et al. address the problems using an EKF formulation which fuses these measurements with inertial sensors. The authors not only estimate pose and velocity of the MAV, but also estimate sensor biases, scale of the position measurement and self (inter-sensor) calibration in real-time. The authors show that it is possible to obtain a yaw estimate from position measurements only. The authors demonstrate that the proposed framework is capable of running entirely onboard a MAV performing state prediction at the rate of 1 kHz. Their results illustrate that this approach is able to handle measurement delays (up to 500 ms), noise (std. deviation up to 20 cm) and slow update rates (as low as 1 Hz) while dynamic maneuvers are still possible. Stephan Weiss et al. present a detailed quantitative performance evaluation of the real system under the influence of different disturbance parameters and different sensor setups to highlight the versatility of our approach. 
 
 [Weiss, Achtelik 2012] Weiss et al. explore the advantages of utilizing a high-performance navigation algorithm on a low-cost, low-weight micro aerial vehicle (MAV) equipped with a single camera and an inertial measurement unit (IMU) capable of both onboard processing and real-time operations, with focus on a speed estimation module to help control the speed of the MAV, all within an Extended Kalman Filter framework. The system was shown to be useful for real-time self-calibration of the sensor suite – critical to ensuring the robustness and flexibility of any state estimation process – and as a potential solution to some of the tracking failures common to keyframe-based modules. 
 
@@ -27,7 +28,7 @@ In [Weiss2010], Weiss et al. discuss how autonomous micro aerial vehicles (MAVs)
 
 [Lynen 2013] Lynen et al. report on the development of a generic framework to overcome known limitations in fusing information transmitted from multiple sensors in the navigation of robots, focusing mainly on the navigational needs of rotor-based micro aerial vehicles (MAV) which can more easily traverse from indoor to outdoor domains. The authors demonstrate that their Multi-Sensor-Fusion Extended Kalman Filter framework is capable of processing various measurements from an unlimited number of sensors, as well as sensor types, while simultaneously performing online self-calibrations of the overall sensor suite. Designed to be modular, the framework allows seamless handling of sensor signals during operation while performing other complex, iterative calculations to achieve near optimal linearization points for state updates. 
 
-[Engel 2013] Engel et al. propose a novel direct monocular Simultaneous Localization and Mapping (SLAM) algorithm unlike that of existing direct approaches which embrace pure visual odometry. The novelty of the authors’ approach is that it permits the building of consistent, accurate, large-scale 3D maps of the environment while simultaneously tracking camera motion, incorporating any scale-drift in the environment and allowing for the detection and correction of any accumulated drift. The system is capable of running real-time on a central processing unit and as visual odometry on a modern smartphone.
+[Engel 2013] Engel et al. propose a novel direct monocular Simultaneous Localization and Mapping (SLAM) algorithm unlike that of existing direct approaches which embrace pure visual odometry. The novelty of the authors' approach is that it permits the building of consistent, accurate, large-scale 3D maps of the environment while simultaneously tracking camera motion, incorporating any scale-drift in the environment and allowing for the detection and correction of any accumulated drift. The system is capable of running real-time on a central processing unit and as visual odometry on a modern smartphone.
 
 [Rogers III 2014] Rogers et al. presented a methodology for overcoming some of the constraining conditions encountered in a GPS-guided autonomous robotic system, such as occlusion (blocking of GPS signals) and multipath (reception of indirect signals due to environmental reflections) and potentially to ameliorate the effects of jamming or spoofing resulting from adversarial activities. Specifically, the methodology incorporated GPS measurements into a feature-based mapping system, thus providing geo-referenced coordinates allowing for better execution of high-level missions and providing the ability to correct accumulated mapping errors over the course of long-term operations in both indoor and outdoor environments.
 
