--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,6 @@ right=1.5in}
 \usepackage{graphicx}
 \usepackage{microtype}
 \usepackage{hyperref}
-
 \usepackage[T1]{fontenc}
 \usepackage{inconsolata}
 \usepackage{fourier}
@@ -55,7 +54,7 @@ right=1.5in}
 \listoftables
 \end{comment}
 
-\input{Introduction.tex}
+%\input{Introduction.tex}
 
 \input{Prior_Work.tex}
 
@@ -72,6 +71,6 @@ right=1.5in}
 \clearpage
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliographystyle{ieeetr}
-\bibliography{bibliography} 
+\bibliography{bibliography}
 
 \end{document}
