lots of work on Prior Work

--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,7 @@ right=1.5in}
 
 \begin{document}
 \title{
-	{A Hardware-Minimal Unscented Kalman Filtering Framework for Visual-Inertial Navigation of Small Unmanned Aircraft}\\
+	{A Hardware-Minimal Unscented Kalman Filtering Framework for Visual-Inertial Navigation of \\ Small Unmanned Aircraft}\\
 	\vspace{1 em}
 	{\Large Virginia Tech}
 }
@@ -44,7 +44,7 @@ right=1.5in}
 
 \maketitle
 
-%\chapter*{Abstract}
+%\input{Abstract.tex}
 
 %\input{Acknowledgements.tex}
 
@@ -54,7 +54,9 @@ right=1.5in}
 \listoftables
 \end{comment}
 
-%\input{Introduction.tex}
+\input{Acronyms.tex}
+
+\input{Introduction.tex}
 
 \input{Prior_Work.tex}
 
