--- a/Acknowledgements.tex
+++ b/Acknowledgements.tex
@@ -1,3 +1,3 @@
 \chapter*{Acknowledgments}
 
-Five years ago, when I first took an interest in robotics, I went with several of my friends to ask a professor for support in starting a design team. We entered the professor's office with no money, no experience, and no plan. That professor bet on us when we had nothing but curiosity and optimism. Years later, that same professor became my adviser and continued to support me in my research endeavors. It is my pleasure to thank Dr.~Kevin Kochersberger for opening so many doors. Thank you.
+It is my distinct pleasure to thank all of the @@@@@@
