added refs to bib

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -61,3 +61,55 @@ keywords={filtering theory;identification;nonlinear systems;statistical analysis
 doi={10.1109/ACC.2002.1025369}, 
 ISSN={0743-1619}, 
 month={May},}
+
+@article{Weiss2011,
+ author = {Weiss, Stephan and Scaramuzza, Davide and Siegwart, Roland},
+ title = {{Monocular-SLAM-Based Navigation for Autonomous Micro Helicopters in GPS-denied Environments}},
+ journal = {J. Field Robot.},
+ issue_date = {November 2011},
+ volume = {28},
+ number = {6},
+ month = nov,
+ year = {2011},
+ issn = {1556-4959},
+ pages = {854--874},
+ numpages = {21},
+ url = {http://dx.doi.org/10.1002/rob.20412},
+ doi = {10.1002/rob.20412},
+ acmid = {2063253},
+ publisher = {John Wiley and Sons Ltd.},
+ address = {Chichester, UK},
+} 
+
+@INPROCEEDINGS{Weiss2011_2, 
+author={S. Weiss and R. Siegwart}, 
+booktitle={2011 IEEE International Conference on Robotics and Automation}, 
+title={{Real-Time Metric State Estimation for Modular Vision-Inertial Systems}}, 
+year={2011}, 
+pages={4531-4537}, 
+keywords={Kalman filters;SLAM (robots);accelerometers;cameras;computational complexity;distance measurement;gyroscopes;inertial navigation;mobile robots;pose estimation;real-time systems;robot vision;state estimation;GPS solution;black box;camera pose;compass attitude estimation;computational complexity;extended Kalman filter;inertial sensor;metric state estimation;modular vision-inertial system;monoSLAM approach;monocular visual odometry;pose estimation algorithm;real-time metric state estimation;single camera solution;three-axis accelerometer;visual SLAM;Cameras;Estimation;Noise;Position measurement;Quaternions;Robot sensing systems;Visualization}, 
+doi={10.1109/ICRA.2011.5979982}, 
+ISSN={1050-4729}, 
+month={May},}
+
+@INPROCEEDINGS{Weiss2012, 
+author={S. Weiss and M. W. Achtelik and M. Chli and R. Siegwart}, 
+booktitle={2012 IEEE International Conference on Robotics and Automation}, 
+title={{Versatile Distributed Pose Estimation and Sensor Self-Calibration for an Autonomous MAV}}, 
+year={2012}, 
+pages={31-38}, 
+keywords={Kalman filters;aerospace control;autonomous aerial vehicles;motion control;nonlinear filters;pose estimation;position control;position measurement;sensors;velocity control;EKF formulation;autonomous MAV;autonomous flight;disturbance parameter;dynamic maneuver;frequency 1 kHz;inertial sensor;inter-sensor calibration;measurement delay;microaerial vehicle;noise;position control;position measurement;sensor biases;sensor self-calibration;state prediction;velocity;versatile distributed pose estimation;yaw estimate;Calibration;Cameras;Computers;Delay;Position measurement;Robot sensing systems}, 
+doi={10.1109/ICRA.2012.6225002}, 
+ISSN={1050-4729}, 
+month={May},}
+
+@INPROCEEDINGS{Weiss2012_2, 
+author={S. Weiss and M. W. Achtelik and S. Lynen and M. Chli and R. Siegwart}, 
+booktitle={2012 IEEE International Conference on Robotics and Automation}, 
+title={{Real-Time Onboard Visual-Inertial State Estimation and Self-Calibration of MAVs in Unknown Environments}}, 
+year={2012}, 
+pages={957--964}, 
+keywords={aircraft;cameras;computational complexity;inertial navigation;microrobots;mobile robots;pose estimation;robot vision;EKF framework;MAV self-calibration;camera;constant complexity;fall-back solution;ground station;inertial measurement unit;inertial sensors;keyframe-based VSLAM module;metric body-speed sensor;micro aerial vehicle navigation;observability analysis;on-board processing;onboard Atom computer 1.6 GHz;real-time onboard visual-inertial state estimation;robot navigation;scalable 6DoF pose estimation;speed-estimation module;unknown environments;visual sensors;Atom optics;Equations;Estimation;Navigation;Optical sensors;Robustness;Weight measurement}, 
+doi={10.1109/ICRA.2012.6225147}, 
+ISSN={1050-4729}, 
+month={May},}
