--- a/Exp_Design.tex
+++ b/Exp_Design.tex
@@ -36,6 +36,6 @@ tk: figure of sensor mount
 
 A series of three experiments were designed to characterize the UKF framework's effectiveness in various regimes of motion. To characterize the accuracy of state estimates in lengthy, monodimensional motion, two ``long walk'' experiments were conducted---one in the $x$-direction, the other in the $y$-direction. These experiments were meant to determine changes in estimate accuracy over large, planar translations (for example, to uncover the evolution of error in the system over time while effectively manipulating only one state variable). For each long walk, the test stand was translated without rotation along the positive $x$- and $y$-axes over distances of approximately seven meters, then returned to the starting location via the same path.
 
-The third experiment was a rectangular translation designed to characterize the the system's effectiveness when translated along two axes. Again, the cart was translated without rotation around the corners of a nearly square rectangle having sides approximately four meters in length.
+The third experiment was a rectangular translation designed to characterize the system's effectiveness when translated along two axes. Again, the cart was translated without rotation around the corners of a nearly square rectangle having sides approximately four meters in length.
 
 Three data streams were collected for analysis using rosbags, 
