added more refs to bib

--- a/Exp_Design.tex
+++ b/Exp_Design.tex
@@ -20,15 +20,15 @@ tk: figure of sensor mount
 \subsection{Mobile Test Stand}
 \begin{enumerate}
 \item One (1) Oklahoma Sound PRC200 Premium Presentation Cart\footnote{\url{http://www.oklahomasound.com/products/product-category/single/?prod=9}}
-\item One (1) 3D-printed sensor mount (see Figure~\ref{fig:sensor_mount})
-\item Two (2) 4-inch C-clamps
-\item One (1) 1.2-meter 80/20 1515 rail\footnote{\url{https://8020.net/1515.html}}
+\item One (1) 3D-printed Sensor Mount (see Figure~\ref{fig:sensor_mount})
+\item Two (2) 4" C-Clamps
+\item One (1) 1.2-meter 80/20 1515 Rail\footnote{\url{https://8020.net/1515.html}}
 \item One (1) 15 Series ``L'' Handle Linear Bearing Brake Kit\footnote{\url{https://8020.net/6800.html}}
-\item One (1) tk: other rail screw
-\item Two (2) tk: the part that goes inside the rail for both the brake and the screw
-\item Three (3) 1-inch Vicon infrared retroreflector balls
-\item Two (2) 0.5-inch Vicon infrared retroreflector balls
-\item One (1) 0.7-meter length of $\frac{1}{8}$-inch-thick carbon fiber rod
+\item One (1) $\frac{5}{16}$-18 $\times$ 0.687" Black FBHSCS (Screw)\footnote{\url{https://8020.net/shop/3320.html}}
+\item Two (2) Slide-In Economy T-Nuts\footnote{Also available at \url{https://8020.net/shop/3320.html}}
+\item Three (3) 1" Vicon Infrared Retroreflector Balls
+\item Two (2) $\frac{1}{2}$" Vicon Infrared Retroreflector Balls
+\item One (1) 0.7-meter Length of $\frac{1}{8}$"-thick Carbon Fiber Rod
 \end{enumerate}
 
 
