--- a/bibliography.bib
+++ b/bibliography.bib
@@ -56,7 +56,7 @@ booktitle={Proceedings of the 2002 American Control Conference (IEEE Cat. No.CH3
 title={{The Scaled Unscented Transformation}}, 
 year={2002}, 
 volume={6}, 
-pages={4555-4559 vol.6}, 
+pages={4555--4559}, 
 keywords={filtering theory;identification;nonlinear systems;statistical analysis;Cartesian coordinates;UT;angular uncertainties;coordinate conversion;covariance prediction;mean prediction;nonlinear systems;polar coordinates;probability distribution;scaled unscented transformation;sigma points;truncated filter;Cities and towns;Filtering;Filters;Gaussian distribution;Jacobian matrices;Nonlinear systems;Random variables;Sampling methods;Statistics;Uncertainty}, 
 doi={10.1109/ACC.2002.1025369}, 
 ISSN={0743-1619}, 
@@ -86,7 +86,7 @@ author={S. Weiss and R. Siegwart},
 booktitle={2011 IEEE International Conference on Robotics and Automation}, 
 title={{Real-Time Metric State Estimation for Modular Vision-Inertial Systems}}, 
 year={2011}, 
-pages={4531-4537}, 
+pages={4531--4537}, 
 keywords={Kalman filters;SLAM (robots);accelerometers;cameras;computational complexity;distance measurement;gyroscopes;inertial navigation;mobile robots;pose estimation;real-time systems;robot vision;state estimation;GPS solution;black box;camera pose;compass attitude estimation;computational complexity;extended Kalman filter;inertial sensor;metric state estimation;modular vision-inertial system;monoSLAM approach;monocular visual odometry;pose estimation algorithm;real-time metric state estimation;single camera solution;three-axis accelerometer;visual SLAM;Cameras;Estimation;Noise;Position measurement;Quaternions;Robot sensing systems;Visualization}, 
 doi={10.1109/ICRA.2011.5979982}, 
 ISSN={1050-4729}, 
@@ -97,7 +97,7 @@ author={S. Weiss and M. W. Achtelik and M. Chli and R. Siegwart},
 booktitle={2012 IEEE International Conference on Robotics and Automation}, 
 title={{Versatile Distributed Pose Estimation and Sensor Self-Calibration for an Autonomous MAV}}, 
 year={2012}, 
-pages={31-38}, 
+pages={31--38}, 
 keywords={Kalman filters;aerospace control;autonomous aerial vehicles;motion control;nonlinear filters;pose estimation;position control;position measurement;sensors;velocity control;EKF formulation;autonomous MAV;autonomous flight;disturbance parameter;dynamic maneuver;frequency 1 kHz;inertial sensor;inter-sensor calibration;measurement delay;microaerial vehicle;noise;position control;position measurement;sensor biases;sensor self-calibration;state prediction;velocity;versatile distributed pose estimation;yaw estimate;Calibration;Cameras;Computers;Delay;Position measurement;Robot sensing systems}, 
 doi={10.1109/ICRA.2012.6225002}, 
 ISSN={1050-4729}, 
@@ -113,3 +113,51 @@ keywords={aircraft;cameras;computational complexity;inertial navigation;microrob
 doi={10.1109/ICRA.2012.6225147}, 
 ISSN={1050-4729}, 
 month={May},}
+
+@ARTICLE{Huang2013, 
+author={G. P. Huang and A. I. Mourikis and S. I. Roumeliotis}, 
+journal={IEEE Transactions on Robotics}, 
+title={{A Quadratic-Complexity Observability-Constrained Unscented Kalman Filter for SLAM}}, 
+year={2013}, 
+volume={29}, 
+number={5}, 
+pages={1226--1243}, 
+keywords={Kalman filters;SLAM (robots);computational complexity;path planning;regression analysis;state estimation;EKF-based SLAM;Monte-Carlo simulations;SLAM;UKF;cubic computational complexity;extended Kalman filter-based SLAM;nonlinear SLAM system;quadratic-complexity observability-constrained unscented Kalman filter;simultaneous localization and mapping problem;state estimation;Computational complexity;estimator consistency;simultaneous localization and mapping (SLAM);system observability;unscented Kalman filter}, 
+doi={10.1109/TRO.2013.2267991}, 
+ISSN={1552-3098}, 
+month={Oct},}
+
+@INPROCEEDINGS{Lynen2013, 
+author={S. Lynen and M. W. Achtelik and S. Weiss and M. Chli and R. Siegwart}, 
+booktitle={2013 IEEE/RSJ International Conference on Intelligent Robots and Systems}, 
+title={{A Robust and Modular Multi-Sensor Fusion Approach Applied to MAV Navigation}}, 
+year={2013}, 
+pages={3923--3929}, 
+keywords={Kalman filters;aerospace robotics;image sensors;microrobots;mobile robots;path planning;pressure sensors;sensor fusion;GPS receiver;GPS signals;Global Positioning System;IEKF updates;MAV navigation;MSF-EKF;inertial sensors;iterated EKF updates;micro aerial vehicle;modular multisensor fusion approach;multisensor-fusion extended Kalman filter;pressure sensors;robot navigation;robot transition;sensor ensemble calibration;sensor feeds;sensor information;sensor outages;state buffering scheme;visual sensors;Calibration;Current measurement;Global Positioning System;Simultaneous localization and mapping;Time measurement;Visualization}, 
+doi={10.1109/IROS.2013.6696917}, 
+ISSN={2153-0858}, 
+month={Nov},}
+
+@INPROCEEDINGS{Rogers2014, 
+author={J. G. Rogers and J. R. Fink and E. A. Stump}, 
+booktitle={2014 American Control Conference}, 
+title={{Mapping with a Ground Robot in GPS Denied and Degraded Environments}}, 
+year={2014}, 
+pages={1880--1885}, 
+keywords={Global Positioning System;mobile robots;vehicles;GPS measurements;GPS signals;accumulated map error;degraded environments;feature-based mapping system;geo-referenced coordinates;ground robot system;high level mission execution;inertial measurements;large-scale mixed indoor environments;military training facilities;occlusion;outdoor environments;unknown environment;vehicles;Global Positioning System;Iterative closest point algorithm;Robot kinematics;Robot sensing systems;Three-dimensional displays;Trajectory;Estimation;Fault detection/accomodation;Sensor fusion}, 
+doi={10.1109/ACC.2014.6859100}, 
+ISSN={0743-1619}, 
+month={June},}
+
+@article {Faessler2016,
+author = {Faessler, Matthias and Fontana, Flavio and Forster, Christian and Mueggler, Elias and Pizzoli, Matia and Scaramuzza, Davide},
+title = {{Autonomous, Vision-Based Flight and Live Dense 3D Mapping with a Quadrotor Micro Aerial Vehicle}},
+journal = {Journal of Field Robotics},
+volume = {33},
+number = {4},
+issn = {1556-4967},
+url = {http://dx.doi.org/10.1002/rob.21581},
+doi = {10.1002/rob.21581},
+pages = {431--450},
+year = {2016},
+}
